--- a/index.html
+++ b/index.html
@@ -651,9 +651,10 @@
                     </div>
                 </div>
                 <!-- sdh -->
-                <section class="about-us-section" data-humcolor="#000">
+                <section class="about-us-section home-sec" data-humcolor="#000">
                     <div class="about-us-inner d-flex" id="scroll-direction">
-                        <div class="about-us-images res o-image" data-scroll>
+                        <div class="about-us-images res o-image" data-scroll data-scroll-sticky
+                            data-scroll-target="#scroll-direction">
                             <img class="" src="/assets/resources/img/about.png" alt="" title="" />
                         </div>
 
