--- a/services.html
+++ b/services.html
@@ -283,7 +283,7 @@
                 <section class="about-us-section" data-humcolor="#000">
                     <div class="about-us-inner d-flex" id="scroll-direction">
                         <div id="test"></div>
-                        <div class="about-us-image" data-scroll data-scroll-sticky
+                        <div class="about-us-image move" data-scroll data-scroll-sticky
                             data-scroll-target="#scroll-direction"> <img data-scroll
                                 src="/assets/resources/img/service-bg.png" alt="" title="" />
                         </div>
@@ -352,18 +352,14 @@
                                 </div>
                             </div>
                             <div class="image" data-scroll="">
-                                <div class="text_anim">
-                                    <span>
-                                        <img src="/assets/resources/img/Service-elements/Service-01.svg" alt="" />
-                                    </span>
+                                <div class="o-image" data-scroll="">
+                                    <img src="/assets/resources/img/Service-elements/Service-01.svg" alt="" />
                                 </div>
                             </div>
                         </div>
                         <div class="flex-con align-center wrap-flex" data-scroll>
-                            <div class="image text_anim">
-                                <span>
-                                    <img src="/assets/resources/img/Service-elements/Service-02.svg" alt="" />
-                                </span>
+                            <div class="image o-image" data-scroll="">
+                                <img src="/assets/resources/img/Service-elements/Service-02.svg" alt="" />
                             </div>
                             <div class="fle p-left text_anim">
                                 <h3 class="typ" id="6">
@@ -380,10 +376,12 @@
                                             Mapping, Visual Design and UI Kits.
                                         </span>
                                     </p>
-                                    <div class="en-form-submit"><a href="interface-design.html"
-                                            class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
-                                                data-text="Read More">Read More</span></a>
-                                    </div>
+                                    <span>
+                                        <div class="en-form-submit"><a href="interface-design.html"
+                                                class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
+                                                    data-text="Read More">Read More</span></a>
+                                        </div>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -410,17 +408,17 @@
                                     </span>
                                 </div>
                             </div>
-                            <div class="image  text_anim">
-                                <span>
-                                    <img src="/assets/resources/img/Service-elements/Service-03.svg" alt="" />
-                                </span>
+                            <div class="image o-image" data-scroll="">
+
+                                <img src="/assets/resources/img/Service-elements/Service-03.svg" alt="" />
+
                             </div>
                         </div>
                         <div class="flex-con align-center wrap-flex" data-scroll="">
-                            <div class="image  text_anim">
-                                <span>
-                                    <img src="/assets/resources/img/Service-elements/Service-04.svg" alt="" />
-                                </span>
+                            <div class="image o-image" data-scroll="">
+
+                                <img src="/assets/resources/img/Service-elements/Service-04.svg" alt="" />
+
                             </div>
                             <div class="fle p-left  text_anim">
                                 <h3 class="typ" id="#2">
@@ -428,10 +426,12 @@
                                 </h3>
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
-                                        Search Engine Optimisation, Social Media Management, Influencer Management,
-                                        Media
-                                        Planning & Buying, Auction Media Management, Content Curation & Online
-                                        Reputation Management.
+                                        <span>
+                                            Search Engine Optimisation, Social Media Management, Influencer Management,
+                                            Media
+                                            Planning & Buying, Auction Media Management, Content Curation & Online
+                                            Reputation Management.
+                                        </span>
                                     </p>
                                     <span>
                                         <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
@@ -528,28 +528,28 @@
                             </div>
                         </div>
                     </div>
-                    <div class="marquees" style="background: transparent;">
+                    <div class="marquees dark" style="background: transparent;">
                         <a href="#">
                             <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="WORK"
-                                data-cursor="-color-white -xlg">
+                                data-cursor="-color-white -lg">
 
                                 <div class="marquees__part">
-                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle.svg" alt="" />
                                 </div>
                                 <div class="marquees__part">
-                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle.svg" alt="" />
                                 </div>
                                 <div class="marquees__part">
-                                    GET TO KNOW US<img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                    GET TO KNOW US<img src="/assets/resources/img/footer-circle.svg" alt="" />
                                 </div>
                                 <div class="marquees__part">
-                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle.svg" alt="" />
                                 </div>
                                 <div class="marquees__part">
-                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle.svg" alt="" />
                                 </div>
                                 <div class="marquees__part">
-                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                    GET TO KNOW US <img src="/assets/resources/img/footer-circle.svg" alt="" />
                                 </div>
                             </div>
                         </a>
@@ -597,7 +597,7 @@
                                         </li>
                                         <li>
                                             <a href="" class="face"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -850,7 +850,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-   
+
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
