--- a/about.html
+++ b/about.html
@@ -374,11 +374,11 @@
                                 <div data-scroll class="why move">
                                     <img src="/assets/resources/img/why-us.svg" alt="" />
                                     <div>
-                                        <div class="flex text_anim">
+                                        <div class="flex ">
                                             <div class="left-con text_anim">
                                                 <h4><span>/01</span></h4>
                                             </div>
-                                            <div class="right-con">
+                                            <div class="right-con text_anim">
                                                 <h3><span>Culture</span></h3>
                                                 <p>
                                                     <span>
@@ -394,11 +394,11 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="flex text_anim">
-                                            <div class="left-con">
+                                        <div class="flex">
+                                            <div class="left-con text_anim">
                                                 <h4><span>/02</span></h4>
                                             </div>
-                                            <div class="right-con">
+                                            <div class="right-con text_anim">
                                                 <h3>
                                                     <span>Ethos</span>
                                                 </h3>
@@ -415,11 +415,11 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="flex text_anim">
-                                            <div class="left-con">
+                                        <div class="flex">
+                                            <div class="left-con text_anim">
                                                 <h4><span>/03</span></h4>
                                             </div>
-                                            <div class="right-con">
+                                            <div class="right-con text_anim">
                                                 <h3><span>Attitude</span></h3>
                                                 <p>
                                                     <span>
@@ -432,11 +432,11 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <div class="flex text_anim">
-                                            <div class="left-con">
+                                        <div class="flex">
+                                            <div class="left-con text_anim">
                                                 <h4><span>/05</span></h4>
                                             </div>
-                                            <div class="right-con">
+                                            <div class="right-con text_anim">
                                                 <h3><span>Experience</span></h3>
                                                 <p>
                                                     <span>
@@ -450,12 +450,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div>
-                                        <div class="flex text_anim">
-                                            <div class="left-con">
+                                    <div class="las">
+                                        <div class="flex">
+                                            <div class="left-con text_anim">
                                                 <h4><span>/06</span></h4>
                                             </div>
-                                            <div class="right-con">
+                                            <div class="right-con text_anim">
                                                 <h3><span>Magic</span></h3>
                                                 <p>
                                                     <span>
@@ -477,8 +477,8 @@
                 </section>
 
                 <!-- Team Sec -->
-                <div class="grdient" style="background: linear-gradient(1deg, #090e26, #031554);">
-                    <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
+                <div class="grdient" data-bgcolor="#000">
+                    <!-- <img class="bg-team" src="/assets/resources/img/our-team.png" alt=""> -->
                     <!-- <section class="team-s" data-humcolor="#fff" data-scroll>
                         <div class="container text_anim">
                             <h2 class="he"><span>Our Team</span></h2>
@@ -2070,13 +2070,14 @@
                     <!-- About Logos -->
                     <section class="client-section" data-humcolor="#fff" data-scroll>
 
-                        <div class="concept" data-scroll>
+                        <!-- <div class="concept" data-scroll>
                             <figure data-scroll data-scroll-speed="1">
                                 <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
                             </figure>
-                        </div>
+                        </div> -->
                         <div class="container text_anim">
-                            <h2 id="clint">CLIENTS LOVE US!
+                            <h2 id="clint">
+                                <span>CLIENTS LOVE US!</span>
                                 <audio id="beep-one" controls="controls" preload="auto">
                                     <source src="/client.mp3">
                                     </source>
@@ -2097,29 +2098,29 @@
                                     That’s why we say, we don’t work for clients, we work with our friends.
                                 </span>
                             </p>
-                            <div class="grid-logo">
-                                <div class="logo-item bottom-border">
+                            <div class="grid-logo " data-scroll>
+                                <div class="logo-item bottom-border o-image" data-scroll>
                                     <img src="/assets/resources/img/logo/logo01.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item bottom-border">
+                                <div class="logo-item bottom-border o-image" data-scroll>
                                     <img src="/assets/resources/img/logo/logo02.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item bottom-border">
+                                <div class="logo-item bottom-border o-image" data-scroll>
                                     <img src="/assets/resources/img/logo/logo03.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item bottom-border" style="border: none;">
+                                <div class="logo-item bottom-border o-image" style="border: none;" data-scroll>
                                     <img src="/assets/resources/img/logo/logo04.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item">
+                                <div class="logo-item o-image" data-scroll>
                                     <img src="/assets/resources/img/logo/logo05.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item">
+                                <div class="logo-item o-image" data-scroll>
                                     <img src="/assets/resources/img/logo/logo06.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item">
+                                <div class="logo-item o-image" data-scroll>
                                     <img src="/assets/resources/img/logo/logo07.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item" style="border: none;">
+                                <div class="logo-item o-image" style="border: none;" data-scroll>
                                     <img src="/assets/resources/img/logo/logo08.svg" alt="logo" />
                                 </div>
                             </div>
@@ -2165,7 +2166,7 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                      <div class="footer-right">
+                            <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
@@ -2444,7 +2445,7 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-   
+
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
