--- a/strategy.html
+++ b/strategy.html
@@ -299,8 +299,13 @@
                     <div class="el5 el-bg"></div>
                     <div class="el6 el-bg"></div>
                     <div class="top-h" data-scroll>
-                        <h1 class="text-rveal"><span>Strategy &</span></h1>
-                        <h1 class="h1-r text-rveal"><span>Planning</span></h1>
+                        <h1 class="text-rveal"><span class="header_title_line"><span>
+                                    Strategy &
+                                </span></span>
+                            <span class="h1-r header_title_line"><span>
+                                    Planning
+                                </span>
+                        </h1>
                         <!-- <div class="element">Why do you need design?</div> -->
                     </div>
                 </section>
